--- a/index.html
+++ b/index.html
@@ -574,132 +574,204 @@
         securely, all while ensuring your peace of mind. Read on to discover how Escrow Crypto protects you, whether
         you’re a Buyer, a Seller, or a Broker.
       </p>
+      <!-- desktop -->
+      <div class="d-none d-lg-flex"></div>
+      <!-- mobile -->
+      <div class="d-flex d-lg-none flex-column">
+        <!-- box 1 -->
+        <div class="d-flex position-relative p-2 mb-3">
+          <div class="d-flex d-md-none position-absolute top-0" style="left: 0;">
+            <img src="./img/elements/box_outline.png" alt="" class="img-fluid">
+          </div>
+          <div class="d-none d-md-flex position-absolute top-0" style="left: 0;">
+            <img src="./img/elements/box-outline-large.png" alt="" class="img-fluid">
+          </div>
+          <div class="d-flex protection_text_box flex-column p-3">
+            <h4 class="protection_title">Buyer Protection</h4>
+            <p class="para mb-0">At Escrow Crypto, we protect you as a Buyer by ensuring you receive, in full, the goods and/or services you were promised.</p>
+            <p class="para mb-0">
+              Every Buyer has their own decentralized cold storage wallet at Escrow Crypto. The crypto is kept in cold storage by Escrow Crypto at all times and... 
+            <a href="#" style="color: #15BFFD;">Read more</a></p>
+          </div>
+        </div>
+        <!-- box 2 -->
+        <div class="d-flex position-relative p-2 mb-3">
+          <div class="d-flex d-md-none position-absolute top-0" style="left: 0;">
+            <img src="./img/elements/box_outline.png" alt="" class="img-fluid">
+          </div>
+          <div class="d-none d-md-flex position-absolute top-0" style="left: 0;">
+            <img src="./img/elements/box-outline-large.png" alt="" class="img-fluid">
+          </div>
+
+          <div class="d-flex protection_text_box flex-column p-3">
+            <h4 class="protection_title">Seller protection</h4>
+            <p class="para mb-0">Escrow Crypto ensures that, as a seller, you’ll receive your money once you deliver the promised goods and/or services.
+              </p>
+            <p class="para mb-0">
+              The seller receives proof of payment from Escrow Crypto before sending the goods.
+              The selling party has its own wallet at Escrow... 
+            <a href="#" style="color: #15BFFD;">Read more</a></p>
+          </div>
+        </div>
+        <!-- box 3 -->
+        <div class="d-flex position-relative p-2 mb-3">
+          <div class="d-flex d-md-none position-absolute top-0" style="left: 0;">
+            <img src="./img/elements/box_outline.png" alt="" class="img-fluid">
+          </div>
+          <div class="d-none d-md-flex position-absolute top-0" style="left: 0;">
+            <img src="./img/elements/box-outline-large.png" alt="" class="img-fluid">
+          </div>
+          <div class="d-flex protection_text_box flex-column p-3">
+            <h4 class="protection_title">Broker protection</h4>
+            <p class="para mb-0">
+              Lorem ipsum dolor sit amet consectetur. Elit massa erat vitae non semper quis. Morbi sed aliquet donec  facilisis. Senectus eget.
+            <a href="#" style="color: #15BFFD;">Read more</a></p>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <!-- protection end -->
 
 
 
+
+
+
+
   <!-- explorer start -->
   <div
-  class="d-flex d-flex flex-column flex-lg-row  text-white my-lg-5 py-lg-5 px-0 px-lg-5 justify-content-center align-items-center text-start position-relative crypto_swapping">
-  <div class="col-12 col-lg-5 d-flex flex-column justify-content-center align-items-center my-3">
-    <img src="./img/elements/explorer.png" alt="" class="img_swap">
-  </div>
-  <div class="col-12 col-lg-7 d-flex flex-column px-3 px-lg-5">
-    <h3 class="mb-4 title_h3 text-start">BLOCKCHAIN EXPLORER</h3>
-    <p class="text-start para mt-3 w-100">
-      Escrow Crypto uses the blockchain explorer to monitor their clients transactions. This technology indicates whether a transaction has been approved or is still pending.
-    </p>
-    <p class="text-start para w-100">
-      To provide some basic terms, a block explorer is a blockchain search engine that allows you to search for a particular piece of information on the blockchain. The activities carried out on crypto blockchains are known as transactions, which occur when cryptocurrencies are sent to and from wallet addresses.
-    </p>
-    <p class="text-start para w-100">
-      When the buyer makes a transaction to Escrow Crypto, all the details of the transaction will appear in the login dashboard.
-    </p>
-    <p class="text-start para w-100">
-      Here we check together if the transaction is completed and has all the required confirmations. When the transaction is approved by the miners the Escrow process will continue and the seller can safely send the goods to the buyer.
-    </p>
-
-    <a href="" class="px-3 color_btn my-4 py-2 me-2">View more</a>
-    <div class="h_line mt-4 mb-3"></div>
-  </div>
-
-</div>
-<!-- explorer end -->
-
-
-
-
-
-
-<!-- footer start -->
-<section>
-  <div
-  class="d-flex d-flex flex-column flex-lg-row  text-white mb-4  py-5 py-lg-5 px-0 px-lg-5 justify-content-center align-items-center text-start position-relative footer_bg">
-  <div class="d-flex flex-column flex-lg-row footer">
-    <!-- col-1 -->
-    <div class="col-12 col-lg-5 d-flex flex-column px-3 ps-lg-0 pe-lg-5">
-      <a class="navbar-brand" href="#">
-        <img src="./img/elements/dashboard logo.png" alt="" class="img-nav-footer">
-      </a>
+    class="d-flex d-flex flex-column flex-lg-row  text-white my-lg-5 py-lg-5 px-0 px-lg-5 justify-content-center align-items-center text-start position-relative crypto_swapping">
+    <div class="col-12 col-lg-5 d-flex flex-column justify-content-center align-items-center my-3">
+      <img src="./img/elements/explorer.png" alt="" class="img_swap">
+    </div>
+    <div class="col-12 col-lg-7 d-flex flex-column px-3 px-lg-5">
+      <h3 class="mb-4 title_h3 text-start">BLOCKCHAIN EXPLORER</h3>
       <p class="text-start para mt-3 w-100">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In urna ultrices amet tellus ornare. Faucibus id posuere massa 
+        Escrow Crypto uses the blockchain explorer to monitor their clients transactions. This technology indicates
+        whether a transaction has been approved or is still pending.
       </p>
-      <div class="d-flex">
-        <!-- fb -->
-        <a href="#" class="me-2">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-            <g clip-path="url(#clip0_205_2706)">
-              <path d="M17.9802 0.00146484H5.99921C2.70397 0.00146484 -0.000793457 2.70623 -0.000793457 6.02051V18.0015C-0.000793457 21.2967 2.70397 24.0015 5.99921 24.0015H17.9802C21.2944 24.0015 23.9992 21.2967 23.9992 17.9824V6.02051C23.9992 2.70623 21.2944 0.00146484 17.9802 0.00146484ZM15.2183 12.0015H12.9516V19.43H10.0944V12.0015H8.57063V8.95385H9.90397V7.65861C9.90397 6.43956 10.5135 4.51575 13.0849 4.51575H15.4278V7.04908H13.7706C13.504 7.04908 13.1421 7.22051 13.1421 7.81099V8.95385H15.4849L15.2183 12.0015Z" fill="#15BFFD"/>
-            </g>
-            <defs>
-              <clipPath id="clip0_205_2706">
-                <rect width="24" height="24" fill="white" transform="translate(-0.000366211 0.000976562)"/>
-              </clipPath>
-            </defs>
-          </svg>
-        </a>
-        <!-- linked in -->
-        <a href="#" class="me-2">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-            <g clip-path="url(#clip0_205_2710)">
-              <path d="M17.9666 0.0109863H6.01421C2.70256 0.0109863 -6.10352e-05 2.7136 -6.10352e-05 6.02526V17.9967C-6.10352e-05 21.2893 2.70256 23.992 6.01421 23.992H17.9857C21.2973 23.992 23.9999 21.2893 23.9999 17.9777V6.02526C23.9809 2.7136 21.2783 0.0109863 17.9666 0.0109863ZM7.99359 19.4242H4.56774V9.52724H7.99359V19.4242ZM6.26164 8.00464C5.29098 8.00464 4.51064 7.22431 4.51064 6.25365C4.51064 5.28299 5.29098 4.50266 6.26164 4.50266C7.23229 4.50266 8.01263 5.28299 8.01263 6.25365C7.99359 7.22431 7.21326 8.00464 6.26164 8.00464ZM19.4321 19.4242H19.4131H16.5582V14.628C16.5582 13.467 16.406 11.9824 14.8263 11.9824C13.2085 11.9824 12.942 13.2386 12.942 14.5518V19.4242H10.0872V9.52724H12.7517V10.8595H12.8279C13.2466 10.0982 14.2172 9.50821 15.7398 9.50821C18.8802 9.50821 19.4321 11.3163 19.4321 13.9999V19.4242Z" fill="#15BFFD"/>
-            </g>
-            <defs>
-              <clipPath id="clip0_205_2710">
-                <rect width="24" height="24" fill="white" transform="translate(-0.000244141 0.000976562)"/>
-              </clipPath>
-            </defs>
-          </svg>
-        </a>
-        <!-- twitter -->
-        <a href="#" class="me-2">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-            <g clip-path="url(#clip0_205_2714)">
-              <path d="M17.9666 0.0109863H6.01415C2.70249 0.0109863 -0.00012207 2.7136 -0.00012207 6.02526V17.9967C-0.00012207 21.2893 2.70249 23.992 6.01415 23.992H17.9856C21.2973 23.992 23.9999 21.2893 23.9999 17.9777V6.02526C23.9808 2.7136 21.2782 0.0109863 17.9666 0.0109863ZM17.9475 8.99433C17.9475 9.12756 17.9475 9.26079 17.9475 9.39402C17.9475 13.3908 14.8643 17.9967 9.21161 17.9967C7.47966 17.9967 5.86189 17.5019 4.51058 16.6454C4.75801 16.6644 4.9864 16.6835 5.23382 16.6835C6.68029 16.6835 7.99353 16.2077 9.04032 15.3893C7.68901 15.3702 6.56609 14.4947 6.16641 13.2957C6.35674 13.3337 6.54706 13.3528 6.73739 13.3528C7.02288 13.3528 7.30836 13.3147 7.55579 13.2386C6.18544 12.9531 5.13866 11.735 5.13866 10.2695V10.2314C5.51931 10.4598 6.01415 10.5931 6.509 10.6121C5.6906 10.0792 5.13866 9.14659 5.13866 8.0998C5.13866 7.54786 5.29092 7.03398 5.55737 6.5772C7.07997 8.40433 9.32581 9.60337 11.8762 9.7366C11.8191 9.50821 11.8 9.27982 11.8 9.05143C11.8 7.37657 13.1704 6.02526 14.8643 6.02526C15.7398 6.02526 16.5391 6.38688 17.1101 6.97689C17.8143 6.84366 18.4614 6.59624 19.0514 6.23462C18.823 6.93882 18.3282 7.52883 17.7001 7.90948C18.3282 7.83335 18.9182 7.68109 19.4701 7.43367C19.0514 8.04271 18.5375 8.57562 17.9475 8.99433Z" fill="#15BFFD"/>
-            </g>
-            <defs>
-              <clipPath id="clip0_205_2714">
-                <rect width="24" height="24" fill="white" transform="translate(-0.000244141 0.000976562)"/>
-              </clipPath>
-            </defs>
-          </svg>
-        </a>
+      <p class="text-start para w-100">
+        To provide some basic terms, a block explorer is a blockchain search engine that allows you to search for a
+        particular piece of information on the blockchain. The activities carried out on crypto blockchains are known as
+        transactions, which occur when cryptocurrencies are sent to and from wallet addresses.
+      </p>
+      <p class="text-start para w-100">
+        When the buyer makes a transaction to Escrow Crypto, all the details of the transaction will appear in the login
+        dashboard.
+      </p>
+      <p class="text-start para w-100">
+        Here we check together if the transaction is completed and has all the required confirmations. When the
+        transaction is approved by the miners the Escrow process will continue and the seller can safely send the goods
+        to the buyer.
+      </p>
+
+      <a href="" class="px-3 color_btn my-4 py-2 me-2">View more</a>
+      <div class="h_line mt-4 mb-3"></div>
+    </div>
+
+  </div>
+  <!-- explorer end -->
+
+
+
+
+
+
+  <!-- footer start -->
+  <section>
+    <div
+      class="d-flex d-flex flex-column flex-lg-row  text-white mb-4  py-5 py-lg-5 px-0 px-lg-5 justify-content-center align-items-center text-start position-relative footer_bg">
+      <div class="d-flex flex-column flex-lg-row footer">
+        <!-- col-1 -->
+        <div class="col-12 col-lg-5 d-flex flex-column px-3 ps-lg-0 pe-lg-5">
+          <a class="navbar-brand" href="#">
+            <img src="./img/elements/dashboard logo.png" alt="" class="img-nav-footer">
+          </a>
+          <p class="text-start para mt-3 w-100">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In urna ultrices amet tellus ornare. Faucibus id
+            posuere massa
+          </p>
+          <div class="d-flex">
+            <!-- fb -->
+            <a href="#" class="me-2">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                <g clip-path="url(#clip0_205_2706)">
+                  <path
+                    d="M17.9802 0.00146484H5.99921C2.70397 0.00146484 -0.000793457 2.70623 -0.000793457 6.02051V18.0015C-0.000793457 21.2967 2.70397 24.0015 5.99921 24.0015H17.9802C21.2944 24.0015 23.9992 21.2967 23.9992 17.9824V6.02051C23.9992 2.70623 21.2944 0.00146484 17.9802 0.00146484ZM15.2183 12.0015H12.9516V19.43H10.0944V12.0015H8.57063V8.95385H9.90397V7.65861C9.90397 6.43956 10.5135 4.51575 13.0849 4.51575H15.4278V7.04908H13.7706C13.504 7.04908 13.1421 7.22051 13.1421 7.81099V8.95385H15.4849L15.2183 12.0015Z"
+                    fill="#15BFFD" />
+                </g>
+                <defs>
+                  <clipPath id="clip0_205_2706">
+                    <rect width="24" height="24" fill="white" transform="translate(-0.000366211 0.000976562)" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </a>
+            <!-- linked in -->
+            <a href="#" class="me-2">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                <g clip-path="url(#clip0_205_2710)">
+                  <path
+                    d="M17.9666 0.0109863H6.01421C2.70256 0.0109863 -6.10352e-05 2.7136 -6.10352e-05 6.02526V17.9967C-6.10352e-05 21.2893 2.70256 23.992 6.01421 23.992H17.9857C21.2973 23.992 23.9999 21.2893 23.9999 17.9777V6.02526C23.9809 2.7136 21.2783 0.0109863 17.9666 0.0109863ZM7.99359 19.4242H4.56774V9.52724H7.99359V19.4242ZM6.26164 8.00464C5.29098 8.00464 4.51064 7.22431 4.51064 6.25365C4.51064 5.28299 5.29098 4.50266 6.26164 4.50266C7.23229 4.50266 8.01263 5.28299 8.01263 6.25365C7.99359 7.22431 7.21326 8.00464 6.26164 8.00464ZM19.4321 19.4242H19.4131H16.5582V14.628C16.5582 13.467 16.406 11.9824 14.8263 11.9824C13.2085 11.9824 12.942 13.2386 12.942 14.5518V19.4242H10.0872V9.52724H12.7517V10.8595H12.8279C13.2466 10.0982 14.2172 9.50821 15.7398 9.50821C18.8802 9.50821 19.4321 11.3163 19.4321 13.9999V19.4242Z"
+                    fill="#15BFFD" />
+                </g>
+                <defs>
+                  <clipPath id="clip0_205_2710">
+                    <rect width="24" height="24" fill="white" transform="translate(-0.000244141 0.000976562)" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </a>
+            <!-- twitter -->
+            <a href="#" class="me-2">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                <g clip-path="url(#clip0_205_2714)">
+                  <path
+                    d="M17.9666 0.0109863H6.01415C2.70249 0.0109863 -0.00012207 2.7136 -0.00012207 6.02526V17.9967C-0.00012207 21.2893 2.70249 23.992 6.01415 23.992H17.9856C21.2973 23.992 23.9999 21.2893 23.9999 17.9777V6.02526C23.9808 2.7136 21.2782 0.0109863 17.9666 0.0109863ZM17.9475 8.99433C17.9475 9.12756 17.9475 9.26079 17.9475 9.39402C17.9475 13.3908 14.8643 17.9967 9.21161 17.9967C7.47966 17.9967 5.86189 17.5019 4.51058 16.6454C4.75801 16.6644 4.9864 16.6835 5.23382 16.6835C6.68029 16.6835 7.99353 16.2077 9.04032 15.3893C7.68901 15.3702 6.56609 14.4947 6.16641 13.2957C6.35674 13.3337 6.54706 13.3528 6.73739 13.3528C7.02288 13.3528 7.30836 13.3147 7.55579 13.2386C6.18544 12.9531 5.13866 11.735 5.13866 10.2695V10.2314C5.51931 10.4598 6.01415 10.5931 6.509 10.6121C5.6906 10.0792 5.13866 9.14659 5.13866 8.0998C5.13866 7.54786 5.29092 7.03398 5.55737 6.5772C7.07997 8.40433 9.32581 9.60337 11.8762 9.7366C11.8191 9.50821 11.8 9.27982 11.8 9.05143C11.8 7.37657 13.1704 6.02526 14.8643 6.02526C15.7398 6.02526 16.5391 6.38688 17.1101 6.97689C17.8143 6.84366 18.4614 6.59624 19.0514 6.23462C18.823 6.93882 18.3282 7.52883 17.7001 7.90948C18.3282 7.83335 18.9182 7.68109 19.4701 7.43367C19.0514 8.04271 18.5375 8.57562 17.9475 8.99433Z"
+                    fill="#15BFFD" />
+                </g>
+                <defs>
+                  <clipPath id="clip0_205_2714">
+                    <rect width="24" height="24" fill="white" transform="translate(-0.000244141 0.000976562)" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </a>
+          </div>
+          <p class="text-start para mt-3 w-100">
+            Copyright &copy; NFT core 2022 All right reserved
+          </p>
+        </div>
+        <div class="col-12 col-lg-7 d-flex flex-column flex-lg-row footer">
+          <!-- col-2 -->
+          <div class="col-12 col-lg-4 mt-4 mt-lg-0 px-3 mb-2 d-flex flex-column">
+            <h4 class="mb-3">Site Map</h4>
+            <a href="#" class="mb-3">Home</a>
+            <a href="#" class="mb-3">Services</a>
+            <a href="#" class="mb-3">About</a>
+            <a href="#" class="mb-3">Protection</a>
+            <a href="#" class="mb-3">Blockchain Explorer</a>
+          </div>
+          <!-- col-3 -->
+          <div class="col-12 col-lg-4 mt-4 mt-lg-0 px-3 mb-2 d-flex flex-column">
+            <h4 class="mb-3">Company</h4>
+            <a href="#" class="mb-3">Help & Support</a>
+            <a href="#" class="mb-3">Terms & Conditions</a>
+            <a href="#" class="mb-3">Privacy Policy</a>
+          </div>
+          <!-- col-4 -->
+          <div class="col-12 col-lg-4 mt-4 mt-lg-0 px-3 mb-2 d-flex flex-column">
+            <h4 class="mb-3">Resource</h4>
+            <a href="#" class="mb-3">Partner</a>
+            <a href="#" class="mb-3">Blog</a>
+            <a href="#" class="mb-3">Newsletter</a>
+          </div>
+        </div>
       </div>
-      <p class="text-start para mt-3 w-100">
-        Copyright &copy;  NFT core 2022 All right reserved
-      </p>
     </div>
-    <div class="col-12 col-lg-7 d-flex flex-column flex-lg-row footer">
-      <!-- col-2 -->
-    <div class="col-12 col-lg-4 mt-4 mt-lg-0 px-3 mb-2 d-flex flex-column">
-      <h4 class="mb-3">Site Map</h4>
-      <a href="#" class="mb-3">Home</a>
-      <a href="#" class="mb-3">Services</a>
-      <a href="#" class="mb-3">About</a>
-      <a href="#" class="mb-3">Protection</a>
-      <a href="#" class="mb-3">Blockchain Explorer</a>
-    </div>
-    <!-- col-3 -->
-    <div class="col-12 col-lg-4 mt-4 mt-lg-0 px-3 mb-2 d-flex flex-column">
-      <h4 class="mb-3">Company</h4>
-      <a href="#" class="mb-3">Help & Support</a>
-      <a href="#" class="mb-3">Terms & Conditions</a>
-      <a href="#" class="mb-3">Privacy Policy</a>
-    </div>
-    <!-- col-4 -->
-    <div class="col-12 col-lg-4 mt-4 mt-lg-0 px-3 mb-2 d-flex flex-column">
-      <h4 class="mb-3">Resource</h4>
-      <a href="#" class="mb-3">Partner</a>
-      <a href="#" class="mb-3">Blog</a>
-      <a href="#" class="mb-3">Newsletter</a>
-    </div>
-    </div>
-  </div>
-</div>
-</section>
-<!-- footer end -->
+  </section>
+  <!-- footer end -->
 
 
 
