--- a/dashboard.html
+++ b/dashboard.html
@@ -24,6 +24,7 @@
   <!-- Customized Bootstrap Stylesheet -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
   <!-- Template Stylesheet -->
   <link href="css/dashboard.css" rel="stylesheet" />
@@ -210,10 +211,11 @@
       <!-- row 1 -->
       <div class="col-12 d-flex flex-row px-4 pb-4 pt-0">
         <!-- grid box -->
-        <div class="col-12 col-lg-8 d-flex justify-content-center align-items-center">
+        <div class="col-12 col-lg-8 d-flex justify-content-center align-items-start">
           <div class="col-12 col-lg-7 d-flex flex-row">
             <div class="col-12 col-lg-6 d-flex flex-column justify-content-center align-items-center">
-              <div class="d-flex w-100 box-total d-flex flex-column justify-content-center align-items-center mb-2 me-2">
+              <div
+                class="d-flex w-100 box-total d-flex flex-column justify-content-center align-items-center mb-2 me-2">
                 <h1>ch-1</h1>
               </div>
               <div class="d-flex w-100 box-total d-flex flex-column justify-content-center align-items-center me-2">
@@ -229,22 +231,80 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-5 p-4">
-            <div class="d-flex w-100 box-total d-flex flex-column justify-content-center align-items-center ">
-              <h1>chat</h1>
+          <div class="col-12 col-lg-5 p-2 pt-lg-0">
+            <div class="d-flex w-100 box-total d-flex flex-column justify-content-center align-items-start p-2">
+              <h2 class="chat-title text-start">Chat</h2>
+              <div class="d-flex flex-column chat-container w-100">
+                <!-- chat message 1 -->
+                <div class="d-flex flex-column w-100">
+                  <div class="d-flex flex-row">
+                    <img src="./img/elements/user1.png" alt="" class="me-2"
+                      style="width: 25px; height: 25px; border-radius: 100%;">
+                    <h4 class="chat-h4-title">Thomas</h4>
+                  </div>
+                  <div class="d-flex flex-column w-100 align-items-end">
+                    <div class="d-flex box-total p-2">
+                      <p class="chat-message text-start">Lorem ipsum is placeholder text commonly.</p>
+                    </div>
+                    <div class="d-flex flex-row justify-content-end align-items-center">
+                      <div class="d-flex me-2" style="width: max-content !important;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="7" viewBox="0 0 14 7" fill="none">
+                          <path d="M4.6228 3.66831L7.08774 6.13715L12.1661 1.05615" stroke="#09F0FF"
+                            stroke-width="1.72237" stroke-linecap="round" stroke-linejoin="round" />
+                          <path d="M1.17773 3.66831L3.64267 6.13715L8.72106 1.05615" stroke="#09F0FF"
+                            stroke-width="1.72237" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                      </div>
+                      <p class="time-text my-1" style="width: max-content !important;">Feb 08, 08.30PM</p>
+                    </div>
+                  </div>
+                </div>
+                <!-- chat message 2 -->
+                <div class="d-flex flex-column w-100">
+                  <div class="d-flex flex-row">
+                    <img src="./img/elements/user2.png" alt="" class="me-2"
+                      style="width: 25px; height: 25px; border-radius: 100%;">
+                    <h4 class="chat-h4-title">Thomas</h4>
+                  </div>
+                  <div class="d-flex flex-column w-100 align-items-end">
+                    <div class="d-flex box-total p-2">
+                      <p class="chat-message text-start">Lorem ipsum is placeholder text commonly.</p>
+                    </div>
+                    <div class="d-flex flex-row justify-content-end align-items-center">
+                      <div class="d-flex me-2" style="width: max-content !important;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="7" viewBox="0 0 14 7" fill="none">
+                          <path d="M4.6228 3.66831L7.08774 6.13715L12.1661 1.05615" stroke="#09F0FF"
+                            stroke-width="1.72237" stroke-linecap="round" stroke-linejoin="round" />
+                          <path d="M1.17773 3.66831L3.64267 6.13715L8.72106 1.05615" stroke="#09F0FF"
+                            stroke-width="1.72237" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                      </div>
+                      <p class="time-text my-1" style="width: max-content !important;">Feb 08, 08.30PM</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- message input -->
+              <div class="d-flex flex-row justify-content-center align-items-center position-relative chat-input  px-2 py-2">
+                <input type="text" placeholder="Let's chat" class="mb-0">
+                <button class="d-flex justify-content-center align-items-center">
+                  <i class="bi bi-send send-icon mb-0"></i>
+                </button>
+              </div>
             </div>
           </div>
         </div>
-        
+
         <!-- total -->
         <div class="col-12 col-lg-4 d-flex ">
-          
+
           <div class="col-12 col-lg-7 d-flex w-100">
             <div class="d-flex w-100 box-total d-flex flex-column justify-content-center align-items-center py-2 px-3">
               <!-- item 1 -->
               <div class="d-flex w-100 flex-row justify-content-center align-items-center my-3">
                 <div class="col-6 d-flex flex-row">
-                  <img src="./img/elements/Classic.png" alt="" class="me-2" style="width: 40px; height: 40px; border-radius: 100%;">
+                  <img src="./img/elements/Classic.png" alt="" class="me-2"
+                    style="width: 40px; height: 40px; border-radius: 100%;">
                   <div class="d-flex flex-column coin-text text-start">
                     <p class="mb-0">Usdt</p>
                     <span>Received</span>
@@ -260,7 +320,8 @@
               <!-- item 2 -->
               <div class="d-flex w-100 flex-row justify-content-center align-items-center my-3">
                 <div class="col-6 d-flex flex-row">
-                  <img src="./img/elements/Binance-Coin.png" alt="" class="me-2" style="width: 40px; height: 40px; border-radius: 100%;">
+                  <img src="./img/elements/Binance-Coin.png" alt="" class="me-2"
+                    style="width: 40px; height: 40px; border-radius: 100%;">
                   <div class="d-flex flex-column coin-text text-start">
                     <p class="mb-0">Usdt</p>
                     <span>Received</span>
@@ -276,7 +337,8 @@
               <!-- item 3 -->
               <div class="d-flex w-100 flex-row justify-content-center align-items-center my-3">
                 <div class="col-6 d-flex flex-row">
-                  <img src="./img/elements/Classic.png" alt="" class="me-2" style="width: 40px; height: 40px; border-radius: 100%;">
+                  <img src="./img/elements/Classic.png" alt="" class="me-2"
+                    style="width: 40px; height: 40px; border-radius: 100%;">
                   <div class="d-flex flex-column coin-text text-start">
                     <p class="mb-0">Usdt</p>
                     <span>Received</span>
@@ -292,7 +354,8 @@
               <!-- item 4 -->
               <div class="d-flex w-100 flex-row justify-content-center align-items-center my-3">
                 <div class="col-6 d-flex flex-row">
-                  <img src="./img/elements/Group.png" alt="" class="me-2" style="width: 40px; height: 40px; border-radius: 100%;">
+                  <img src="./img/elements/Group.png" alt="" class="me-2"
+                    style="width: 40px; height: 40px; border-radius: 100%;">
                   <div class="d-flex flex-column coin-text text-start">
                     <p class="mb-0">Usdt</p>
                     <span>Received</span>
@@ -308,7 +371,8 @@
               <!-- item 5 -->
               <div class="d-flex w-100 flex-row justify-content-center align-items-center my-3">
                 <div class="col-6 d-flex flex-row">
-                  <img src="./img/elements/Etherium icon.png" alt="" class="me-2" style="width: 40px; height: 40px; border-radius: 100%;">
+                  <img src="./img/elements/Etherium icon.png" alt="" class="me-2"
+                    style="width: 40px; height: 40px; border-radius: 100%;">
                   <div class="d-flex flex-column coin-text text-start">
                     <p class="mb-0">Usdt</p>
                     <span>Received</span>
